--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -43,6 +43,7 @@ hr.space {
 }
 /* Make horizontal line as appbar link mediator */
 hr.mediator {
+  display: flex;
   width: 100%;
   opacity: 0;
   margin: 0;
