--- a/src/styles/text.css
+++ b/src/styles/text.css
@@ -73,11 +73,12 @@ h4.h1 {
 h4.h1:hover {
   color: rgba(255, 255, 255, 1);
 }
-h4.h1.active {
+.navigation a.active h4.h1 {
   border-right: 5px double rgb(171, 150, 111);
   border-left: 5px double rgb(171, 150, 111);
   color: rgba(255, 255, 255, 1);
   border-radius: 100%;
+  padding: 5px;
 }
 h4.h1.left {
   padding-right: 10px;
