--- a/src/styles/text.css
+++ b/src/styles/text.css
@@ -58,10 +58,13 @@ h3.h2 {
 /* H4: Link text */
 h4 {
   color: rgba(255, 255, 255, 1);
+  text-decoration: none !important;
+  padding: 5px 10px;
 }
 /* Navigation and footer bars */
 h4.h1 {
   color: rgba(133, 133, 133, 1);
+  margin: 0px 0px !important;
   text-transform: uppercase;
   font-size: 0.75rem;
   align-self: center;
@@ -70,23 +73,17 @@ h4.h1 {
   cursor: pointer;
   margin: 0 15px;
 }
+a.h4-h1{ 
+  text-decoration: none;
+}
 h4.h1:hover {
   color: rgba(255, 255, 255, 1);
 }
-.navigation a.active h4.h1 {
+a.active h4.h1 {
   border-right: 5px double rgb(171, 150, 111);
   border-left: 5px double rgb(171, 150, 111);
   color: rgba(255, 255, 255, 1);
   border-radius: 100%;
-  padding: 5px;
-}
-h4.h1.left {
-  padding-right: 10px;
-  text-align: left;
-}
-h4.h1.right {
-  padding-right: 10px;
-  text-align: right;
 }
 /* Scroll Top */
 h4.h2 {
