--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -2,3 +2,8 @@
 .menu > .MuiMenu-paper {
     background-color: rgba(65, 65, 65, 1);
 }
+
+.menu > .MuiPaper-root {
+    background-color: rgba(65, 65, 65, 1);
+    padding: 0px 5px;
+}
