--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -22,3 +22,18 @@
   width: calc(100% - 4px);
   margin: 0px auto 0px auto;
 }
+/* Rank card styles */
+.modal {
+  background: rgb(85, 85, 85) !important;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 0px 50px;
+  width: fit-content;
+}
+.modal img {
+  border: 2px double rgba(171, 150, 111, 1);
+  width: max-content;
+  margin: 10px auto 0px auto;
+}
