--- a/src/styles/text.css
+++ b/src/styles/text.css
@@ -108,40 +108,35 @@ h5.h1 {
 /**/
 /**/
 h6.h1 {
-  color: rgba(255, 255, 255, 1);
+  color: rgb(255, 255, 255);
   text-align: center;
   font-size: 1rem;
   font-weight: bold;
 }
 /**/
-/**/
-h6.h7 {
-  color: rgba(255, 255, 255, 1);
-  text-align: center;
+h6.h2 {
+  color: rgb(255, 255, 255);
+  text-align: left;
   font-size: 1rem;
   font-weight: bold;
-}
-/**/
-/**/
-h6.h9 {
-  color: rgba(255, 255, 255, 1);
-  text-transform: uppercase;
-  font-weight: 900 !important;
-  font-size: 1.2rem !important;
-}
-/**/
-/**/
-h6.h10 {
-  color: rgba(255, 255, 255, 1);
-  text-transform: uppercase;
-  font-weight: 900 !important;
-  font-size: 1.2rem !important;
 }
 /* Other text: paragraphs etc*/
 /* Paragraph */
 p {
   color: rgb(255, 255, 255);
   text-align: center;
+  font-size: 1rem;
+  font-weight: bold;
+}
+p.h1 {
+  color: rgb(255, 255, 255);
+  text-align: center;
+  font-size: 1rem;
+  font-weight: bold;
+}
+p.h2 {
+  color: rgb(255, 255, 255);
+  text-align: left;
   font-size: 1rem;
   font-weight: bold;
 }
